<resources>
    <string name="app_name">VT_MVVM_BaseProject</string>

    <string name="login">Login</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="error_email">Please enter your valid email address</string>
    <string name="error_password">Please enter your valid password</string>
    <string name="no_internet">No internet connection!</string>
    <string name="try_again">Try Again</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
</resources>
